--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,30 +1,30 @@
 {
-	"manifest_version": 2,
-	"name": "treehouse grabber",
-	"short_name": "#",
-    "description": "##",
-	"version": "0.0.0.1",
-	"background": {
-		"scripts": [
-			"js/background.js"
-		]
-	},
-	"content_scripts": [{
-		"matches": [
-			"*://*.teamtreehouse.com/*",
-			"*://*.lynda.com/*"
-		],
-		"js": [
+    "manifest_version": 2,
+    "name": "Grabber",
+    "short_name": "Media Grabber",
+    "description": "Grab Media for Offline Use",
+    "version": "0.0.0.1",
+    "background": {
+        "scripts": [
+            "js/background.js"
+        ]
+    },
+    "content_scripts": [{
+        "matches": [
+            "*://*.teamtreehouse.com/*",
+            "*://*.lynda.com/*"
+        ],
+        "js": [
             "js/jquery-3.2.1.min.js",
-			"js/content.js"
-		],
-		"run_at": "document_end"
-	}],
-	"permissions": [
-		"tabs", "webNavigation", "notifications", "cookies"
-	],
-	"browser_action": {
+            "js/content.js"
+        ],
+        "run_at": "document_end"
+    }],
+    "permissions": [
+        "tabs", "webNavigation", "notifications", "cookies"
+    ],
+    "browser_action": {
 
-	},
-	"web_accessible_resources": ["template/*", "js/*", "css/*", "fonts/*", "images/*", "manifest.json"]
+    },
+    "web_accessible_resources": ["template/*", "js/*", "css/*", "fonts/*", "images/*", "manifest.json"]
 }
